--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: app1nginx 
-          image: acrfordem.azurecr.io/app1nginx
+          image: aksacr4.azurecr.io/app1nginx
           ports:
           - containerPort: 80
